<resources >

    <string name="app_name">PlayAndroid</string>
    <string name="login">登录</string>
    <string name="collection">收藏</string>
    <string name="todo">代办事项</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="home">首页</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="custom_view">自定义View</string>

    <string name="login_user_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>

    <string name="login_register">还没注册？</string>
    <string name="login_user_empty">请输入用户名</string>
    <string name="login_user_limit">用户名不能少于３个字符</string>
    <string name="login_password_empty">请输入密码</string>
    <string name="login_password_limit">密码不能少于６位</string>

    <string name="register">注册</string>
    <string name="register_password_again_hint">请再次输入密码</string>
    <string name="register_repassword_empty">请再次输入密码</string>
    <string name="register_password_diff">两次密码不一致</string>
</resources>
