<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_lock_outline"
            android:title="@string/login"/>
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_collection"
            android:title="@string/collection"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_note"
            android:title="@string/todo"/>

        <item
            android:id="@+id/custom_view"
            android:icon="@drawable/ic_note"
            android:title="@string/custom_view"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_action_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_about"
                android:title="@string/about"/>
        </menu>
    </item>
</menu>