<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="MissingPrefix">

    <include
        android:id="@+id/common_tilte"
        layout="@layout/title_layout" />

    <ImageView
        android:id="@+id/login_user_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y10"
        android:src="@drawable/beauty2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/common_tilte" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginTop="@dimen/y100"
        android:layout_marginRight="@dimen/x50"
        app:layout_constraintTop_toBottomOf="@+id/login_user_logo">

        <ImageView
            android:layout_width="@dimen/x32"
            android:layout_height="@dimen/y100"
            android:src="@drawable/ic_person_outline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:hint="@string/login_user_hint"
            android:inputType="text"
            android:maxLength="20"
            android:paddingLeft="@dimen/x100"
            android:paddingTop="@dimen/y20"
            android:paddingRight="@dimen/x100"
            android:paddingBottom="@dimen/y20"
            android:singleLine="true"
            android:textColor="@color/lg_text_black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="@dimen/x32"
            android:layout_height="@dimen/y100"
            android:layout_marginTop="@dimen/y20"
            android:src="@drawable/ic_lock_outline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_user" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:layout_marginTop="@dimen/y20"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="@dimen/x100"
            android:paddingTop="@dimen/y20"
            android:paddingRight="@dimen/x100"
            android:paddingBottom="@dimen/y20"
            android:singleLine="true"
            android:textColor="@color/lg_text_black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/login_user" />

        <Button
            android:id="@+id/login_login1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y85"
            android:layout_marginTop="@dimen/y30"
            android:background="@color/blue_light"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y30"
            android:text="@string/login_register"
            android:textColor="@color/lg_text_gray"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_login1" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>